# sdl_dependencies

./: .gitmodules  README.md  build_all.sh  build_apr-util.sh  build_apr.sh  build_bson.sh  build_json.sh  build_linux.sh  build_logger.sh  build_qnx650.sh  build_qnx700.sh  build_test_app.sh  install_all.sh
apache-log4cxx-0.10.0/: config.sub
jsoncpp/: CMakeLists.txt
jsoncpp/tools/cmake/helpers/: sources.cmake
test_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log4cxx.properties  main.cc
toolchain_cmake/: Toolchain-QNX7-QCC-Base.cmake
